--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div>
+<form (ngSubmit)="convertInputCurrency()">
   <div class="hero is-primary is-flexible">
     <div class="hero-body">
       <div class="level">
@@ -12,7 +12,7 @@
         </div>
         <div class="level-item">
           <p class="control">
-            <input placeholder="EUR" class="input" type="text" name="from" id="to" 
+            <input placeholder="EUR" class="input" type="text" name="to" id="to" 
             [(ngModel)]="to" readonly value="{{1 | currency:'EUR':'symbol':'1.2-4'}}">
           </p>
         </div>
@@ -21,14 +21,14 @@
       
       <div class="field is-grouped is-grouped-centered">
         <p class="control">
-          <button class="button">
+          <button class="button" type="submit">
             Calculate
           </button>
         </p>
       </div>
     </div>
   </div>
-</div>
+</form>
 <div class="container">
   <!-- Main container -->
   <div class="columns  is-multiline ">
